# gqnrs

./: Cargo.toml  README.md  config.json5  deepmind_dataset.yaml  plot.py  rust-toolchain.toml
src/: args.yml  common.rs  config.rs  convert.rs  data.rs  dataset.rs  dataset.yaml  decoder.rs  encoder.rs  lib.rs  main.rs  message.rs  model.rs  objective.rs  params.rs  representation.rs  rnn.rs  utils.rs
src/model/: decoder.rs  encoder.rs  mod.rs  model.rs  rnn.rs
src/tf_proto/: example.rs  example_parser_configuration.rs  feature.rs  mod.rs
