[package]
name = "gqnrs"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

[dependencies]
tch = "0.1.7"
serde = { version = "1.0.111", features = ["derive"] }
serde_json = "1.0.53"
image = "0.23.4"
glob = "0.3.0"
rayon = "1.3.0"
log = "0.4.8"
maplit = "1.0.2"
pretty_env_logger = "0.4.0"
ndarray = "0.13.1"
par-map = "0.1.4"
itertools = "0.9.0"
crossbeam = "0.7.3"
ctrlc = "3.1.4"
lazy_static = "1.4.0"
regex = "1.3.9"
failure = "0.1.8"
tfrecord = { version = "0.1.2", features = ["full"] }
argh = "0.1.3"
json5 = "0.2.7"
serde_yaml = "0.8.12"
async-std = { version = "1.6.0", features = ["unstable"] }
derivative = "2.1.1"
num_cpus = "1.13.0"
tokio = { version = "0.2.21", features = ["sync"] }
static_assertions = "1.1.0"
rand = "0.7.3"
futures = "0.3.5"

[dev-dependencies]
rv = "0.9.4"
