[package]
name = "gqnrs"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

[dependencies]
tch = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.23"
glob = "0.3"
rayon = "1.3"
log = "0.4"
maplit = "1.0"
pretty_env_logger = "0.4"
ndarray = "0.13"
par-map = "0.1"
itertools = "0.9"
crossbeam = "0.7"
ctrlc = "3.1"
lazy_static = "1.4"
regex = "1.3"
anyhow = "1.0"
tfrecord = { version = "0.3", features = ["full"] }
argh = "0.1"
json5 = "0.2"
serde_yaml = "0.8"
async-std = { version = "1.6", features = ["unstable"] }
derivative = "2.1"
num_cpus = "1.13"
tokio = { version = "0.2", features = ["sync"] }
static_assertions = "1.1"
rand = "0.7"
futures = "0.3"
par-stream = { version = "0.1", git = "https://github.com/jerry73204/par-stream.git" }
tch-tensor-like = { version = "0.1", git = "https://github.com/jerry73204/tch-tensor-like.git", features = ["derive"] }

[dev-dependencies]
rv = "0.10"

[patch.crates-io]
tch = { git = "https://github.com/LaurentMazare/tch-rs.git" }
tfrecord = { git = "https://github.com/jerry73204/rust-tfrecord.git", branch = "tch-with-anyhow" }
