[package]
name = "gqnrs"
version = "0.1.0"
authors = ["jerry73204 <jerry73204@gmail.com>"]
edition = "2018"

[dependencies]
tch = "0.6.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
image = "0.24.1"
glob = "0.3.0"
rayon = "1.5.1"
log = "0.4.16"
maplit = "1.0.2"
pretty_env_logger = "0.4.0"
ndarray = "0.15.4"
par-map = "0.1.4"
itertools = "0.10.3"
crossbeam = "0.8.1"
ctrlc = "3.2.1"
lazy_static = "1.4.0"
regex = "1.5.5"
anyhow = "1.0.56"
tfrecord = { version = "0.13.0", features = ["full"] }
argh = "0.1.7"
json5 = "0.4.1"
serde_yaml = "0.8.23"
async-std = { version = "1.11.0", features = ["unstable", "attributes"] }
derivative = "2.2.0"
num_cpus = "1.13.1"
tokio = { version = "1.17.0", features = ["sync"] }
static_assertions = "1.1.0"
rand = "0.8.5"
futures = "0.3.21"
par-stream = { version = "0.10.2", git = "https://github.com/jerry73204/par-stream.git", features = ["runtime-async-std"] }
tch-tensor-like = { version = "0.5.0", features = ["derive"] }

[dev-dependencies]
rv = "0.14.3"

[patch.crates-io]
# tch = { git = "https://github.com/LaurentMazare/tch-rs.git" }
# tfrecord = { git = "https://github.com/jerry73204/rust-tfrecord.git", branch = "tch-with-anyhow" }
